2007-02-01  Sven Neumann  <sven@gimp.org>

	* app/config/gimpdisplayconfig.c
	* app/widgets/gimpwidgets-utils.c (gimp_get_screen_resolution):
	changed the default monitor resolution to 96 dpi and also use that
	as a fallback value.

2007-01-31  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpitem.c (gimp_item_parasite_detach): require "name"
	being non-NULL.

	* app/core/gimpimage-undo-push.c (undo_pop_parasite): removed dead
	code which handled parasites of the Gimp itself, don't include
	"gimp-parasites.h".

	Require "parasite" and "name" being non-NULL in all public
	parasite undo functions.

2007-01-31  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpmaskundo.c
	* app/core/gimpitempropundo.c: implement GimpObject::get_memsize()
	instead of fiddling with undo->size.

2007-01-31  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-undo-push.[ch]
	(gimp_image_undo_push_fs_to_layer): removed "drawable" parameter
	because it's always the drawable the floating selection is
	attached to.

	* app/core/gimplayer-floating-sel.c (floating_sel_to_layer):
	changed accordingly.

2007-01-31  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpfloatingselundo.[ch]: new undo class for
	GIMP_UNDO_FS_RIGOR and GIMP_UNDO_FS_RELAX.

	* app/core/gimpimage-undo-push.c: use it here.

	* app/core/gimpimageundo.c
	* app/core/gimpdrawableundo.c: implement GimpObject::get_memsize()
	instead of fiddling with undo->size.

2007-01-31  Michael Natterer  <mitch@gimp.org>

	* app/vectors/Makefile.am
	* app/vectors/vectors-types.h
	* app/vectors/gimpvectorsmodundo.[ch]: new undo class for
	GIMP_UNDO_VECTORS_MOD.

	* app/core/gimpimage-undo-push.c: use it here.

	* app/core/gimpdrawablemodundo.h: fix typo in include guard.

2007-01-31  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpdrawablemodundo.[ch]: new undo class for
	GIMP_UNDO_DRAWABLE_MOD.
