@@ -63,6 +63,21 @@ gimp_progress_box_class_init (GimpProgressBoxClass *klass)
 static void
 gimp_progress_box_init (GimpProgressBox *box)
 {
+  gtk_box_set_spacing (GTK_BOX (box), 6);
+
+  box->progress = gtk_progress_bar_new ();
+  gtk_widget_set_size_request (box->progress, 250, 20);
+  gtk_box_pack_start (GTK_BOX (box), box->progress, FALSE, FALSE, 0);
+  gtk_widget_show (box->progress);
+
+  box->label = gtk_label_new ("");
+  gtk_label_set_ellipsize (GTK_LABEL (box->label), PANGO_ELLIPSIZE_MIDDLE);
+  gtk_misc_set_alignment (GTK_MISC (box->label), 0.0, 0.5);
+  gimp_label_set_attributes (GTK_LABEL (box->label),
+                             PANGO_ATTR_STYLE, PANGO_STYLE_ITALIC,
+                             -1);
+  gtk_box_pack_start (GTK_BOX (box), box->label, FALSE, FALSE, 0);
+  gtk_widget_show (box->label);
 }
 
 static void
@@ -188,24 +203,5 @@ gimp_progress_box_progress_pulse (GimpProgress *progress)
 GtkWidget *
 gimp_progress_box_new (void)
 {
-  GimpProgressBox *box;
-
-  box = g_object_new (GIMP_TYPE_PROGRESS_BOX,
-                      "spacing", 6,
-                      NULL);
-
-  box->progress = gtk_progress_bar_new ();
-  gtk_widget_set_size_request (box->progress, 250, 20);
-  gtk_box_pack_start (GTK_BOX (box), box->progress, FALSE, FALSE, 0);
-  gtk_widget_show (box->progress);
-
-  box->label = gtk_label_new ("");
-  gtk_misc_set_alignment (GTK_MISC (box->label), 0.0, 0.5);
-  gimp_label_set_attributes (GTK_LABEL (box->label),
-                             PANGO_ATTR_STYLE, PANGO_STYLE_ITALIC,
-                             -1);
-  gtk_box_pack_start (GTK_BOX (box), box->label, FALSE, FALSE, 0);
-  gtk_widget_show (box->label);
-
-  return GTK_WIDGET (box);
+  return g_object_new (GIMP_TYPE_PROGRESS_BOX, NULL);
 }
